zcm-nginx-ingress-controller/ingress/zcm-scp-ingress.yaml
# 定义zcm-scp ingress配置
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: scp
  namespace: zcm9
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "1024M"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/session-cookie-name: ZCM_SCP_INGRESS_COOKIE
    nginx.ingress.kubernetes.io/rewrite-target: /msp/$2
spec:
  tls:
    - secretName: zcm-tls-secret
  rules:
    - http:
        paths:
          - path: /msp/(/|$)(.*)
            backend:
              serviceName: scp
              servicePort: 8090
